--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+04.10.2004
+- gg2-devel.SlackBuild arguments are passed to autogen.sh now. (shasta)
+- don't use --with-all-plugins in gg2-devel.SlackBuild, it's FUBAR.
+  instead, you can do: sh gg2-devel.SlackBuild --with-all-plugins,
+  if you care that much. (shasta)
+
 03.10.2004
 - fix in gadu-gadu when receive notification about status from contact  
   not listed on userslist (gadu-gadu/krzak)
