- add dbus info

--- a/AUTHORS
+++ b/AUTHORS
@@ -63,6 +63,9 @@ sms
 update		
 		: Jakub Jankowski	<shasta@atn.pl>
 
+DBUS
+                : Marcin Krzy¿anowski   <krzak@linux.net.pl>
+
 ----------------------------------------------------------------
 
 
