--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+05.10.2004
+- bugfix release 2.2.2 (bugs #101-#103)
+
 04.10.2004
 - close #97, won't fix until we got decent parser (emoticons.def/shasta)
 - gg2-devel.SlackBuild arguments are passed to autogen.sh now. (shasta)
