--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+17.11.2004
+- fixed memory leak in ggadu_strcasecmp (changed to function instead macro)
+  and other memory leaks fixed (core/GUI/krzak)
+
 10.11.2004
 - remove useless mozilla-plugin part of code (krzak)
 
