- sync libgadu with ekg cvs version (gadu-gadu/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+18.11.2004
+- sync libgadu with ekg cvs version (gadu-gadu/krzak)
+
 17.11.2004
 - fixed memory leak in ggadu_strcasecmp (changed to function instead macro)
   and other memory leaks fixed (core/GUI/krzak)
