--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+26.11.2004
+- doxygen documentation initial (krzak)
+- changes in some structures
+- improving aaway plugin
+- do not remember I'm away from internet
+
 19.11.2004
 - added modified auto-away plugin to main stream from gg2-plugins cvs module (aaway/krzak)
 
