--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+04.12.2004
+- Reconnect whenever user changes jid || server || resource || proxy in user preferences dialog while being connected. (jabber/mkobierzycki)
+
 02.12.2004
 - display_name is for display only, use plugin->name to identify plugin
 
