--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 19.12.2004
-- changes for gtk 2.6, there is still broken sorting order in with gtk 2.6 (GUI)
+- changes for gtk 2.6, there is still broken sorting order in with gtk 2.6
+  http://bugzilla.gnome.org/show_bug.cgi?id=161720 (GUI)
+- config->argv config->argc values from main(..)
+- small fixes.
 
 15.12.2004
 - dbus plugin update (dbus/krzak)
