- ignore list view added, it still sux but better than nothing (ignore/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+23.12.2004
+- ignore list view added, it still sux but better than nothing (ignore/krzak)
+
 22.12.2004
 - introduce "ignore-main" plugin, not finished yet (krzak)
 - remove current ignore support from jabber plugin, need to use ignore-main plugin. (jabber/krzak)
