--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+25.12.2004
+- patch for external-history plugin destroy function by BJ (foxia@alexandria.cc)
+
 23.12.2004
 - ignore list view added, it still sux but better than nothing (ignore/krzak)
 - fixed status and status description changing (jabber/mkobierzycki)
