--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 27.12.2004
 - add/remove to/from ignored (ignore/krzak)
+- use_xosd_for_status_change by kaneda[at]bohater.net (GUI/krzak)
 
 26.12.2004
 - dcc fixes (GUI/krzak)
