- discover services list in menu (hu hu) - small fixes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 27.12.2004
 - add/remove to/from ignored (ignore/krzak)
 - use_xosd_for_status_change by kaneda[at]bohater.net (GUI/krzak)
+- discovery services list in menu (Jabber/krzak)
 
 26.12.2004
 - dcc fixes (GUI/krzak)
