- aaway trying to keep description (aaway/gadu-gadu/krzak) - fix setting descriptive status (gadu-gady/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+28.12.2004
+- aaway trying to keep description (aaway/gadu-gadu/krzak)
+- fix setting descriptive status (gadu-gady/krzak)
+
 27.12.2004
 - add/remove to/from ignored (ignore/krzak)
 - use_xosd_for_status_change by kaneda[at]bohater.net (GUI/krzak)
