--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+29.12.2004
+- auto-away and status changes fight. (krzak)
+- Tlen plugin need MORE work. Somebody want to help ? (krzak)
+
 28.12.2004
 - aaway trying to keep description (aaway/gadu-gadu/krzak)
 - fix setting descriptive status (gadu-gady/krzak)
