- Happy New Year - search element in context menu (gadu-gadu/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+02.01.2005
+- Happy New Year
+- search element in context menu (gadu-gadu/krzak)
+
 29.12.2004
 - auto-away and status changes fight. (krzak)
 - Tlen plugin need MORE work. Somebody want to help ? (krzak)
