--- a/ChangeLog
+++ b/ChangeLog
@@ -3,11 +3,11 @@
 - search element in context menu (gadu-gadu/krzak)
 
 29.12.2004
-- auto-away and status changes fight. (krzak)
+- auto-away and status changes - fight. (krzak)
 - Tlen plugin need MORE work. Somebody want to help ? (krzak)
 
 28.12.2004
-- aaway trying to keep description (aaway/gadu-gadu/krzak)
+- aaway want keep description (aaway/gadu-gadu/krzak)
 - fix setting descriptive status (gadu-gady/krzak)
 
 27.12.2004
