--- a/po/pl.po
+++ b/po/pl.po
@@ -1,14 +1,14 @@
-# $Id: pl.po,v 1.88 2005/01/04 09:13:45 aflinta Exp $
+# $Id: pl.po,v 1.89 2005/01/04 09:41:49 aflinta Exp $
 # Copyright (C) 2003 GNU Gadu Team.
 # Igor Popik <thrull@slackware.pl>, 2003.
-# Artur Flinta <aflinta@at.kernel.pl>, 2004.
+# Artur Flinta <aflinta@at.kernel.pl>, 2004-2005.
 msgid ""
 msgstr ""
 "Project-Id-Version: gg2 2.0_CVS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-04 09:53+0100\n"
+"POT-Creation-Date: 2005-01-04 10:19+0100\n"
 "PO-Revision-Date: 2003-03-19 19:16+0100\n"
-"Last-Translator: GNU Gadu Team\n"
+"Last-Translator: Artur Flinta\n"
 "Language-Team: GNU Gadu Team\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -367,7 +367,7 @@ msgstr "Wysokość:"
 #. chat_paned_size
 #. ZONK - how to name it ?
 #: src/plugins/GUI/gui_preferences.c:725
-msgid "Split window at: (percent)"
+msgid "Window split (percent):"
 msgstr "Podział okna (w procentach):"
 
 #: src/plugins/GUI/gui_preferences.c:774
@@ -491,46 +491,48 @@ msgstr "Wyświetlanie opisów na liście kontaktów"
 
 #: src/plugins/GUI/gtkimhtml.c:1004
 msgid "Pa_ste As Text"
-msgstr ""
+msgstr "W_klej jako tekst"
 
 #: src/plugins/GUI/gtkimhtml.c:1449
 msgid "Hyperlink color"
-msgstr ""
+msgstr "Kolor odnośnika"
 
 #: src/plugins/GUI/gtkimhtml.c:1450
 msgid "Color to draw hyperlinks."
-msgstr ""
+msgstr "Kolor wyświetlania odnośników"
 
 #: src/plugins/GUI/gtkimhtml.c:1656
 msgid "_Copy E-Mail Address"
-msgstr ""
+msgstr "_Skopiuj adres e-mail"
 
 #: src/plugins/GUI/gtkimhtml.c:1668
 msgid "_Open Link in Browser"
-msgstr ""
+msgstr "_Otwórz odnośnik w przeglądarce"
 
 #: src/plugins/GUI/gtkimhtml.c:1678
 msgid "_Copy Link Location"
-msgstr ""
+msgstr "_Skopiuj adres położenia"
 
 #: src/plugins/GUI/gtkimhtml.c:3250
 msgid ""
 "Unable to guess the image type based on the file extension supplied.  "
 "Defaulting to PNG."
 msgstr ""
+"Nie można ustalić rodzaju obrazu bazując na podanym rozszerzeniu pliku. "
+"Domyślnie zostanie przyjęty format PNG."
 
 #: src/plugins/GUI/gtkimhtml.c:3258
 #, c-format
 msgid "Error saving image: %s"
-msgstr ""
+msgstr "Błąd podczas zapisu obrazu: %s"
 
 #: src/plugins/GUI/gtkimhtml.c:3335 src/plugins/GUI/gtkimhtml.c:3347
 msgid "Save Image"
-msgstr ""
+msgstr "Zapis obrazu"
 
 #: src/plugins/GUI/gtkimhtml.c:3375
 msgid "_Save Image..."
-msgstr ""
+msgstr "_Zapisz obraz..."
 
 #: src/plugins/GUI/gui_main.c:190
 msgid "Unable to read configuration file for plugin GUI, don't worry"
@@ -2025,52 +2027,44 @@ msgid "Unable to read config file for plugin update"
 msgstr "Nie można odczytać pliku z konfiguracją wtyczki aktualizacji"
 
 #: src/plugins/ignore/ignore.c:226
-#, fuzzy
 msgid "List is empty"
-msgstr "Treść wiadomości jest pusta!"
+msgstr "Lista jest pusta"
 
 #: src/plugins/ignore/ignore.c:242
-#, fuzzy
 msgid "Add to ignored"
-msgstr "Wyświetl ignorowanych"
+msgstr "Dodaj do ignorowanych"
 
 #: src/plugins/ignore/ignore.c:243
-#, fuzzy
 msgid "ID to ignore:"
-msgstr "Wyświetl ignorowanych"
+msgstr "Ignorowane ID:"
 
 #: src/plugins/ignore/ignore.c:253
 msgid "Remove from ignored"
-msgstr ""
+msgstr "Usuń z ignorowanych"
 
 #: src/plugins/ignore/ignore.c:254
 msgid "ID to remove:"
-msgstr ""
+msgstr "ID do usunięcia:"
 
 #: src/plugins/ignore/ignore.c:269
-#, fuzzy
 msgid "(Un)Ig_nore"
-msgstr "Ignoruj"
+msgstr "(Nie)Ig_noruj"
 
 #: src/plugins/ignore/ignore.c:273
-#, fuzzy
 msgid "_Ignore"
-msgstr "Ignoruj"
+msgstr "_Ignoruj"
 
 #: src/plugins/ignore/ignore.c:274
-#, fuzzy
 msgid "_Add"
-msgstr "Dodaj"
+msgstr "_Dodaj"
 
 #: src/plugins/ignore/ignore.c:277
-#, fuzzy
 msgid "_List"
-msgstr "Lista"
+msgstr "_Lista"
 
 #: src/plugins/ignore/ignore.c:288
-#, fuzzy
 msgid "Ignore option support"
-msgstr "_Więcej opcji"
+msgstr "Obsługa opcji ignorowania"
 
 #: src/plugins/history/external/history_viewer.c:39
 msgid "External History Viewer Preferences"
