--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 05.01.2005
 - perl support is still too experimental and is disabled by default (krzak)
 - some default values (GUI/krzak)
+- README.dbus for D-BUS plugin
+- 2.2.4
 
 04.01.2005
 - auto-away is independent for every protocol (aaway/krzak)
